# video-2-text

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  video2text.py
tests/: test_video2text.py
